--- a/elements/all/package.json
+++ b/elements/all/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@rhelements/pens-win": "file:elements/pens-win",
     "@rhelements/rh-card": "file:elements/rh-card",
     "@rhelements/rh-cta": "file:elements/rh-cta",
     "@rhelements/rh-datetime": "file:elements/rh-datetime",
